[package]
name = "note-duel"
version = "0.1.1"
authors = ["benthecarman <benthecarman@live.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/MutinyWallet/note-duel"
description = "Do bets on nostr notes"
keywords = ["nostr"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.13.1"
dlc = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = ["use-serde"] }
nostr = { version = "0.26.2", default-features = false }
nostr-sdk = { version = "0.26.1", default-features = false }
serde = "1.0"
serde_json = "1.0"
schnorr_fun = { version = "0.9.2", features = ["bincode", "serde"] }
sha2 = "0.10.8"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
thiserror = "1.0"
lightning = "0.0.118"
gloo-utils = "0.2.0"
bincode = "1.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
getrandom = { version = "0.2", features = ["js"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
web-sys = "0.3.67"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true